--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <body 
     oninput="i.srcdoc=h.value+'<style>'+c.value+
-            '</style><script>'+j.value+'<\/script>'">
+            '</style><script></script>'">
     <style>
         textarea,iframe{width:100%;height:50%}
       
@@ -31,10 +31,10 @@
       </div>
       <textarea  id=c></textarea>
     </div>
-    <div id="js">
+    <div id="js" style="background-color: purple;margin-top: -500px;">
       <div class="header">
-        JAVASCRIPT
+        COMMUNICATE
       </div>
     <textarea  id=j></textarea>
-    </div>
+    </div> 
     <iframe id=i>
