--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,8 +55,10 @@
            html_data=aa;
        }
         function CHANGE(){
-            css_data=dd;
-            html_data=aa;
+            var x = document.getElementById("c").value;
+            var y = document.getElementById("h").value;
+            css_data=c;
+            html_data=y;
         }
 
         
