--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,6 +3,21 @@
         <title>
             <%= title %>
         </title>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("textarea").oninput(function(){
+    $.post("/add",
+    {
+      html: h.value,
+      css: c.value
+    },
+    function(data,status){
+      console.log("Data: " + data + "\nStatus: " + status);
+    });
+  });
+});
+</script>
     </head>
     <body
     oninput="i.srcdoc=h.value+'<style>'+c.value+
