--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
         body{ 
             padding-top:80px;
             background-image: url("https://pixabay.com/static/uploads/photo/2016/03/29/05/51/aztec-1287603_960_720.jpg");
-            //overflow: hidden;
+            /* //overflow: hidden; */
         }
 
         #editor {
@@ -143,7 +143,7 @@ https://ace.c9.io
 
     <div class="jumbotron text-center">
         <h1><span class="fa fa-github"></span> Want the Code?</h1>
-        <a href="https://github.com/Andy93/CodePair" class="btn btn-success"><span class="fa fa-github-square"></span> Github Repo</a>
+        <a href="https://github.com/vivek286/CODE__PAIR" class="btn btn-success"><span class="fa fa-github-square"></span> Github Repo</a>
     </div>
 
 </div>
