--- a/views/notSession.ejs
+++ b/views/notSession.ejs
@@ -13,7 +13,7 @@
         body{ 
             padding-top:80px;
             background-image: url("https://pixabay.com/static/uploads/photo/2016/03/29/05/51/aztec-1287603_960_720.jpg");
-            //overflow: hidden;
+            /* //overflow: hidden; */
         }
     </style>
 </head>
